@@ -1,5 +1,13 @@
 2008-10-12  Andrés G. Aragoneses  <aaragoneses@novell.com>
 
+	* Makefile.am:
+	* MonoDevelop.VersionControl.mdp:
+	* MonoDevelop.VersionControl/ChangeSet.cs:
+	* MonoDevelop.VersionControl.Views/StatusView.cs: Warn about very
+	probable accidental commit situation.
+
+2008-10-12  Andrés G. Aragoneses  <aaragoneses@novell.com>
+
 	* MonoDevelop.VersionControl/ChangeSet.cs:
 	* MonoDevelop.VersionControl.Views/StatusView.cs:
 	* MonoDevelop.VersionControl/VersionControlService.cs: Coding
